tests/unit-fail/j037f.ref
Error: EIO10
Description: Type of lvalue not compatible with the effective type of the object being accessed.
Type: Undefined behavior.
See also: C11 sec. 6.5:7
  at main(j037f.c:10)
  at <file-scope>(<unknown>)
